# OpenGS1

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh
emscripten/gs1webconsole/: CMakeLists.txt  GArrayLibrary.hpp  GFlagLibrary.hpp  Main.cpp  gs1box.css  index.html
example/: test.gs
include/gs1/common/: BufferReader.hpp  ByteBuffer.hpp  ConstantTable.hpp  GValue.hpp  GVariable.hpp  Log.hpp  NanBox.h  Operation.hpp  PackedValue.hpp  Util.hpp
include/gs1/compiler/: BytecodeBody.hpp  BytecodeHeader.hpp  CompileVisitor.hpp  DepthVisitor.hpp
include/gs1/parse/: Diag.hpp  Lexer.hpp  Parser.hpp  Source.hpp  SyntaxTree.hpp  SyntaxTreeVisitor.hpp  Token.hpp
include/gs1/vm/: Bytecode.hpp  Context.hpp  Device.hpp  GLibrary.hpp  GStringFormatter.hpp  GVarStore.hpp  JumpStack.hpp  OperationDispatcher.hpp  Stack.hpp
src/gs1common/: ByteBuffer.cpp  CMakeLists.txt  GValue.cpp  Log.cpp  Operation.cpp  Util.cpp
src/gs1compiler/: BytecodeBody.cpp  BytecodeHeader.cpp  CMakeLists.txt  CompileVisitor.cpp  DepthVisitor.cpp
src/gs1parse/: CMakeLists.txt  Diag.cpp  Lexer.cpp  Parser.cpp  Source.cpp  SyntaxTree.cpp  SyntaxTreeVisitor.cpp  Token.cpp
src/gs1test/: CMakeLists.txt  DebugVisitor.cpp  DebugVisitor.hpp  GFlagLibrary.hpp  GOutputLibrary.hpp  GStringLibrary.hpp  Main.cpp
src/gs1vm/: Bytecode.cpp  CMakeLists.txt  Context.cpp  Device.cpp  GLibrary.cpp  GStringFormatter.cpp  GVarStore.cpp  OperationDispatcher.cpp
